# edelweiss

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  cliff.toml  main.ipynb  pyproject.toml
.github/workflows/: release.yaml
docker_compose/: Dockerfile_dagster  dagster.yaml  docker-compose.yml  workspace.yaml
docker_compose/tegola/: docker-compose.yml
docker_compose/tegola/tegola_config/: config.toml
edelweiss/: __init__.py  constants.py  definitions.py  occurences.py  repository.py  species.py
edelweiss/assets/: __init__.py  ingestion.py  occurences.py  occurrences.py  operational_loading.py
edelweiss/resources/: __init__.py  gbif.py  postgresql.py
